// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dialogsVisibilityReducer should close all dialogs 1`] = `
Object {
  "export": false,
  "exportProgress": false,
  "tips": false,
}
`;

exports[`dialogsVisibilityReducer should initialize to all dialogs closed 1`] = `
Object {
  "export": false,
  "exportProgress": false,
  "tips": false,
}
`;

exports[`dialogsVisibilityReducer should open the export dialog 1`] = `
Object {
  "export": true,
  "exportProgress": false,
  "tips": false,
}
`;

exports[`dialogsVisibilityReducer should open the export progress dialog 1`] = `
Object {
  "export": false,
  "exportProgress": true,
  "tips": false,
}
`;

exports[`dialogsVisibilityReducer should open the tips dialog 1`] = `
Object {
  "export": false,
  "exportProgress": false,
  "tips": true,
}
`;

exports[`dialogsVisibilityReducer should open the prefill dialog 1`] = `
Object {
  "export": false,
  "exportProgress": false,
  "prefill": true,
  "tips": false,
}
`;
